Fix spacing issues

--- a/src/components/ReleaseNote.module.scss
+++ b/src/components/ReleaseNote.module.scss
@@ -13,7 +13,4 @@
   display: block;
   font-size: 16px;
   font-style: italic;
-  margin: 0 var(--mm-spacing);
-
-  @include variables.max-width;
 }
